# vis-navigation

./: .gitignore  README.md  Requirements.md  build.sh  bun.lockb  package.json  tsconfig.json  vite.config.ts
.github/workflows/: arm_release.yml  release.yml
doc/: updater.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  raisound.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  const_data.rs  const_def.rs  handle.rs  lib.rs  main.rs  shortcuts.rs  tray.rs  util.rs
src/component/: update-button.tsx
src/pages/: ad.tsx  quit_confirm.tsx  updater.tsx
update_server/: latest.json
